# xgboost-rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: advanced_usage.rs
src/: lib.rs  model.rs  polars_ext.rs
